# polyxyr

./: LICENSE  README.md
.github/workflows/: check-versions.yml  publish.yml  tag.yml  tests.yml
scripts/: bump-version.sh  check-release-branch.sh  check-versions.sh  publish.sh  tag.sh
src/python/: README.md  pyproject.toml
src/python/polyxyr/: __init__.py
src/rust/: Cargo.toml
src/rust/src/: lib.rs
test/py/: test_version.py
